Bug 51174 - CRASH when FILEOPEN particular .ods
Summary: CRASH when FILEOPEN particular .ods
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0.0.beta3 target:3.7.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-17 08:49 UTC by Rainer Bielefeld Retired
Modified: 2012-06-24 19:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (107.70 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-17 08:49 UTC, Rainer Bielefeld Retired
Details
bt + console msgs on master (10.75 KB, text/plain)
2012-06-19 14:08 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-06-17 08:49:39 UTC
Created attachment 63138 [details]
Sample document

Steps how to reproduce with Master " 3.7.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 5af60dc]" (tinderbox: Win-x86@6-fast, pull time 2012-06-14 22:09:53):

Open attached sample document from LibO Start Center File Menu: CRASH short before contents will appear.

Works without problems in 3.5.5.1, I did not check when problem appeared.
Comment 1 Rainer Bielefeld Retired 2012-06-17 08:51:44 UTC
No problem with 3.6.0beta1
Comment 2 s-joyemusequna 2012-06-18 03:51:17 UTC
Confirmed. Works in 3.6.0 Beta1. It crashes while loading the file with LODev 3.7 W2008R2@20-With-Symbol-Bytemark-Hosting (pull time 2012-06-17 00:09:26). It displays the file content for a fraction of a second with with LOdev 3.7 (Win-x86@6-fast, 2012-06-14), then it crashes. Tested under Windows XP and Vista 64.
Comment 3 Julien Nabet 2012-06-19 14:08:31 UTC
Created attachment 63237 [details]
bt + console msgs on master

On pc Debian x86-64, with master sources updated today, I reproduced the bug.
I attached bt + console msgs.
Comment 4 Not Assigned 2012-06-24 19:20:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd8d068d1fde187cc83dc497ff27fc8e4e924d43&g=libreoffice-3-6

repaint all cells if NULL is passed, fdo#51174


It will be available in LibreOffice 3.6.
Comment 5 Not Assigned 2012-06-24 19:21:14 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9bd77a00490090fa9b43cd1ad270e8847f6e22fe

repaint all cells if NULL is passed, fdo#51174