repaint all cells if NULL is passed, fdo#51174

Change-Id: If58448fa040ad88db4edaa9aaefc771dbad0826b